fix build module abm.rnd